[tool.poetry]
name = "image-handler-api"
version = "0.1.0"
description = ""
authors = ["Dmitrii Ivanov <dmitriy.site1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
